# dgscrawler

./: CMakeLists.txt  cpl_vsisimple.cpp  dgndump.c  dgnopen.cpp  dgnwritetest.c  main.cpp
